[package]
name = "modemmonitor"
version = "0.1.0"
authors = ["Hank Donnay <hdonnay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
regex = "1.3"
dirs = "2.0"
futures = "0.3"
matrix-sdk = "0.1"

[dependencies.clap]
version = "~2.33.0"
default-features = false
features = [ "suggestions" ]

[dependencies.smol]
version = "~0.1.12"
features = [ "tokio02" ]
